bnf.txt
%---petit-prolog BNF---

<program> ::= <empty>
		| <program> <clause> "."
		| <program> <question> "."

<structure-list> ::= <structure>
			| <structure-list> , <structure>

<question> ::= "?-" <structure-list>
<clause> ::= <structure> ":-" <structure-list>
            | <structure>

%Atomは arity 0 のstructureと考える
<structure> ::= <atom> "(" <term-list> ")"
			| <atom>
			| <exp>
			| <variable> is <structure>
			| <structure> = <structure>
			| <structure>

<term> ::= <integer> | <variable> | <structure>
<term-list> ::= <term>
			| <term-list> , <term>


<

<exp> ::= <exp_term> + <exp_term>

<exp_term> ::= <factor> {[* /] <factor> }

<factor> ::= <integer> | <variable> | "(" <exp> ")"
